--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ button {
 }
 
 .loader img {
-     width: 25%;
+     width: 15%;
 }
 
 ul.btn {
